README for challenge WIP

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,7 @@
 // Fonts
-$sans: 'System76 Fira Sans', 'Fira Sans', sans-serif;
-$slab: 'System76 Roboto Slab', 'Roboto Slab', serif;
-$mono: 'System76 Fira Mono', 'Fira Mono', 'Roboto Mono', 'Ubuntu Mono', monospace;
+$sans: 'Fira Sans', sans-serif;
+$slab: 'Roboto Slab', serif;
+$mono: 'Fira Mono', 'Roboto Mono', 'Ubuntu Mono', monospace;
 
 // Font Weights
 $thin-weight:     100;
