--- a/styles/app.scss
+++ b/styles/app.scss
@@ -21,3 +21,7 @@ $fa-font-path: 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/
 @import "specs";
 @import "tabs";
 @import "typography";
+
+///////////////////////////////////////////
+// Please place your implementation here //
+///////////////////////////////////////////
